SD1 assignment - Sofware Development #1

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Me";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>This is all aout me.</p>
+<p>
+    Being a fourth-year double-major in Management Information Systems and Analytics, I am eager to apply myself to new opportunities and explore new industries. I am devoted and determined to become a strong and proficient businesswoman.<br><br />
+
+    I am passionate about learning new software and the ways we can utilize systems and technology. I classify myself as being motivated, well-organized, agile, and an emerging leader. Both my courses and the various on-campus activities I am involved in have prepared me to take on a role in IT in systems or data analytics.<br><br />
+
+    See my contact information if you have any questions.
+</p>
