--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,29 +3,26 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>MIS4200</h1>
+    <p class="lead">Prerequisites for this class are MIS 2020 and 3200.</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Ohio University College of Business</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Ranked #15 best business school by Bloomberg.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://business.ohio.edu/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Academic Programs</h2>
+        <p>Undergraduate Majors, Minors, and Certificates - Graduate Certificates and Programs - Executive Education.</p>
+        <p><a class="btn btn-default" href="https://business.ohio.edu/academics/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Resources</h2>
+        <p>Find resources for current and future Bobcats, parents, employers, alumni, and staff.</p>
+        <p><a class="btn btn-default" href="https://business.ohio.edu/resources/">Learn more &raquo;</a></p>
     </div>
 </div>
