--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,6 +14,8 @@
             Ranked #15 best business school by Bloomberg.
         </p>
         <p><a class="btn btn-default" href="https://business.ohio.edu/">Learn more &raquo;</a></p>
+        <h2>Links to Sample Models</h2>
+        @Html.ActionLink("Customers","Index","Customers")
     </div>
     <div class="col-md-4">
         <h2>Academic Programs</h2>
