--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,7 +15,8 @@
         </p>
         <p><a class="btn btn-default" href="https://business.ohio.edu/">Learn more &raquo;</a></p>
         <h2>Links to Sample Models</h2>
-        @Html.ActionLink("Customers","Index","Customers")
+        @Html.ActionLink("Customers", "Index", "Customers")<br />
+        @Html.ActionLink("Orders", "Index", "Orders")
     </div>
     <div class="col-md-4">
         <h2>Academic Programs</h2>
