--- a/Views/Courses/Create.cshtml
+++ b/Views/Courses/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ps206415_MIS4200.Models.Course
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Course";
 }
 
 <h2>Create</h2>
