--- a/Views/Enrollments/Delete.cshtml
+++ b/Views/Enrollments/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ps206415_MIS4200.Models.Enrollment
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Enrollment";
 }
 
 <h2>Delete</h2>
