--- a/Views/Enrollments/Edit.cshtml
+++ b/Views/Enrollments/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ps206415_MIS4200.Models.Enrollment
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Enrollment";
 }
 
 <h2>Edit</h2>
