--- a/Views/Enrollments/Index.cshtml
+++ b/Views/Enrollments/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ps206415_MIS4200.Models.Enrollment>
 
 @{
-    ViewBag.Title = "Enrollments";
+    ViewBag.Title = "Student Enrollments";
 }
 
 <h2>Index</h2>
