--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <p>
             Ranked #15 best business school by Bloomberg.
         </p>
-        <p><a class="btn btn-default" href="https://business.ohio.edu/">Learn more &raquo;</a></p>
+        <p><a href="https://business.ohio.edu/" class="btn btn-info" role="button">Learn More</a></p>
         <h2>Links to Sample Models</h2>
         @Html.ActionLink("Customers", "Index", "Customers")<br />
         @Html.ActionLink("Students", "Index", "Students")<br />
@@ -23,11 +23,11 @@
     <div class="col-md-4">
         <h2>Academic Programs</h2>
         <p>Undergraduate Majors, Minors, and Certificates - Graduate Certificates and Programs - Executive Education.</p>
-        <p><a class="btn btn-default" href="https://business.ohio.edu/academics/">Learn more &raquo;</a></p>
+        <p><a href="https://business.ohio.edu/" class="btn btn-info" role="button">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Resources</h2>
         <p>Find resources for current and future Bobcats, parents, employers, alumni, and staff.</p>
-        <p><a class="btn btn-default" href="https://business.ohio.edu/resources/">Learn more &raquo;</a></p>
+        <p><a href="https://business.ohio.edu/" class="btn btn-info" role="button">Learn more &raquo;</a></p>
     </div>
 </div>
