--- a/Views/Courses/Delete.cshtml
+++ b/Views/Courses/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ps206415_MIS4200.Models.Course
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Course";
 }
 
 <h2>Delete</h2>
