--- a/Views/Enrollments/Create.cshtml
+++ b/Views/Enrollments/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ps206415_MIS4200.Models.Enrollment
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Enrollment";
 }
 
 <h2>Create</h2>
