--- a/Views/Enrollments/Details.cshtml
+++ b/Views/Enrollments/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ps206415_MIS4200.Models.Enrollment
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Enrollment Details";
 }
 
 <h2>Details</h2>
