--- a/Views/Students/Create.cshtml
+++ b/Views/Students/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ps206415_MIS4200.Models.Student
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Student";
 }
 
 <h2>Create</h2>
