--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,15 +24,20 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle"
-                    </class>
+                    <class ="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                            Sample Models<span class="caret"><</span>
+                        </button>
+                </ul>    
+                    <ul class="dropdown-menu">
                     <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                     <li>@Html.ActionLink("Students", "Index", "Students")</li>
                     <li>@Html.ActionLink("Enrollments", "Index", "Enrollments")</li>
                     <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
+                <ul class="nav pull-right"> 
+                    <li>    @Html.Partial("_LoginPartial")</li>
+                </ul>
             </div>
         </div>
     </div>
