--- a/Views/Courses/Details.cshtml
+++ b/Views/Courses/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ps206415_MIS4200.Models.Course
 
 @{
-    ViewBag.Title = "Course Details";
+    ViewBag.Title = "Details";
 }
 
 <h2>Details</h2>
