--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 @Html.ActionLink("MIS4200", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
@@ -28,13 +28,12 @@
                         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
                             Sample Models<span class="caret"><</span>
                         </button>
-                </ul>    
                     <ul class="dropdown-menu">
-                    <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                    <li>@Html.ActionLink("Customers", "Index", "Home")</li>
                     <li>@Html.ActionLink("Students", "Index", "Students")</li>
                     <li>@Html.ActionLink("Enrollments", "Index", "Enrollments")</li>
                     <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
-                </ul>
+                    </ul>
                 <ul class="nav pull-right"> 
                     <li>    @Html.Partial("_LoginPartial")</li>
                 </ul>
